2010-03-19  Rik  <octave@nomad.inbox5.com>

	* interpreter/basics.txi: Add dump_prefs to documentation.

2010-03-19  Rik  <octave@nomad.inbox5.com>

	* interpreter/octave.texi, interpreter/plot.txi: Add daspect, pbaspect
	functions to documentation.

2010-03-19  Rik  <octave@nomad.inbox5.com>

	* interpreter/octave.texi, interpreter/plot.txi: Add getappdata,
	setappdata, isappdata, rmappdata functions to documentation.

2010-03-18  Rik  <octave@nomad.inbox5.com>

	* interpreter/matrix.txi: Add nth_element function to documentation.

2010-03-18  Rik  <octave@nomad.inbox5.com>

	* interpreter/doccheck/aspell-octave.en.pws, interpreter/io.txi,
	interpreter/octave.texi, interpreter/plot.txi: Add uimenu, uigetdir,
	uigetfile, and uiputfile to documentation.

2010-03-18  Rik  <octave@nomad.inbox5.com>

	* interpreter/nonlin.txi, interpreter/octave.texi: Add fminbnd,
	fminunc functions to documentation.

2010-03-18  Rik  <octave@nomad.inbox5.com>

	* interpreter/arith.txi, interpreter/linalg.txi: Add function chop
	to documentation.  Re-order Utility Functions and move function dot
	from linear algebra section to be with other utility functions.

2010-03-18  Rik  <octave@nomad.inbox5.com>

	* interpreter/basics.txi: Add gen_doc_cache, get_help_text, 
	get_help_text_from_file, get_first_help_sentence to documentation.

2010-03-17  Rik  <octave@nomad.inbox5.com>

	* interpreter/io.txi: Add fileread to documentation.

2010-03-17  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add gethostname to documentation

2010-03-17  Rik  <octave@nomad.inbox5.com>

	* interpreter/doccheck/mk_undocumented_list: Add fmod,
	octave_tmp_file_name to list of exceptions which are already
	documented.

2011-03-17  Iain Murray  <iain@iainmurray.net>

	* interpreter/system.txi: Remove nprocs and nprocs_conf functions
	from documentation and replace with nproc.

2010-03-16  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add nproc and nproc_conf functions to
	documentation.
