@@ -1,5 +1,10 @@
 2010-03-19  Rik  <octave@nomad.inbox5.com>
 
+	* interpreter/plot.txi: Add isocolors, isonormals, isosurface functions
+	to documentation.
+
+2010-03-19  Rik  <octave@nomad.inbox5.com>
+
 	* interpreter/basics.txi: Add dump_prefs to documentation.
 
 2010-03-19  Rik  <octave@nomad.inbox5.com>
